Fix responsive spacing on number list

--- a/_assets/stylesheets/_lists.scss
+++ b/_assets/stylesheets/_lists.scss
@@ -26,9 +26,12 @@
 
     &::before {
       float: left;
-      margin: -0.25em 0.5em 0 0;
+      width: 0.5em;
+      margin: 0 0.5em 0 0;
       font-size: 32px;
       font-weight: 300;
+      line-height: 1.3;
+      text-align: right;
       content: counter(li);
       counter-increment: li;
 
